[project]
name = "my-streamlit-app"
version = "0.1.0"
description = ""
authors = [
    {name = "google-labs-jules[bot]",email = "161369871+google-labs-jules[bot]@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit (>=1.45.1,<2.0.0)",
    "requests-oauthlib (>=1.3.0,<2.0.0)", # OAuth 2.0 フローの処理
    "python-dotenv (>=0.20.0,<2.0.0)"    # .env ファイルからの環境変数の読み込み
]

[tool.poetry]
packages = [{include = "my_streamlit_app", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-mock = "^3.10"
pytest-cov = "^5.0.0" # この行が追加される (バージョンは異なる場合があります)


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
